// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Horizontal bar chart - Screen resolution Should remain unchanged on zoom in 1`] = `
<div>
  <div
    class="fui-hbc__root"
  >
    <div>
      <div
        class="fui-hbc__items"
        data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
      >
        <div
          class="fui-hbc__chartTitle"
        >
          <div
            class="fui-hbc__chartTitleLeft"
            tabindex="0"
          >
            <span
              data-is-focusable="false"
              role="text"
            >
              one
            </span>
            <span
              hidden=""
            />
          </div>
          <div
            class="fui-hbc__chartTitleRight"
            data-is-focusable="false"
            role="text"
          >
            1,543
          </div>
        </div>
        <svg
          aria-label="one"
          class="fui-hbc__chart"
        >
          <g
            id="_HorizontalLine_lllllm_0"
          >
            <defs>
              <lineargradient
                class="HBC_gradient"
                id="HBC_Gradient80_0_0"
              >
                <stop
                  offset="0"
                  stop-color="#004b50"
                />
                <stop
                  offset="100%"
                  stop-color=""
                />
              </lineargradient>
            </defs>
            <rect
              aria-label="2020/04/30, 10%."
              class="fui-hbc__barWrapper"
              data-is-focusable="true"
              fill="url(#HBC_Gradient80_0_0)"
              height="12"
              role="img"
              rx="4"
              tabindex="0"
              width="10.286666666666665%"
              x="0%"
              y="0"
            />
            <defs>
              <lineargradient
                class="HBC_gradient"
                id="HBC_Gradient80_0_1"
              >
                <stop
                  offset="0"
                  stop-color="var(--colorBackgroundOverlay)"
                />
                <stop
                  offset="100%"
                  stop-color="var(--colorBackgroundOverlay)"
                />
              </lineargradient>
            </defs>
            <rect
              aria-label="13457/15000."
              class="fui-hbc__barWrapper"
              data-is-focusable="false"
              fill="url(#HBC_Gradient80_0_1)"
              height="12"
              role="img"
              rx="4"
              width="89.71333333333334%"
              x="10.286666666666665%"
              y="0"
            />
          </g>
        </svg>
      </div>
    </div>
    <div>
      <div
        class="fui-hbc__items"
        data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
      >
        <div
          class="fui-hbc__chartTitle"
        >
          <div
            class="fui-hbc__chartTitleLeft"
            tabindex="0"
          >
            <span
              data-is-focusable="false"
              role="text"
            >
              two
            </span>
            <span
              hidden=""
            />
          </div>
          <div
            class="fui-hbc__chartTitleRight"
            data-is-focusable="false"
            role="text"
          >
            800
          </div>
        </div>
        <svg
          aria-label="two"
          class="fui-hbc__chart"
        >
          <g
            id="_HorizontalLine_lllllm_1"
          >
            <defs>
              <lineargradient
                class="HBC_gradient"
                id="HBC_Gradient80_1_0"
              >
                <stop
                  offset="0"
                  stop-color="#5c2d91"
                />
                <stop
                  offset="100%"
                  stop-color=""
                />
              </lineargradient>
            </defs>
            <rect
              aria-label="2020/04/30, 5%."
              class="fui-hbc__barWrapper"
              data-is-focusable="true"
              fill="url(#HBC_Gradient80_1_0)"
              height="12"
              role="img"
              rx="4"
              tabindex="0"
              width="5.333333333333334%"
              x="0%"
              y="0"
            />
            <defs>
              <lineargradient
                class="HBC_gradient"
                id="HBC_Gradient80_1_1"
              >
                <stop
                  offset="0"
                  stop-color="var(--colorBackgroundOverlay)"
                />
                <stop
                  offset="100%"
                  stop-color="var(--colorBackgroundOverlay)"
                />
              </lineargradient>
            </defs>
            <rect
              aria-label="14200/15000."
              class="fui-hbc__barWrapper"
              data-is-focusable="false"
              fill="url(#HBC_Gradient80_1_1)"
              height="12"
              role="img"
              rx="4"
              width="94.66666666666667%"
              x="5.333333333333334%"
              y="0"
            />
          </g>
        </svg>
      </div>
    </div>
    <div>
      <div
        class="fui-hbc__items"
        data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
      >
        <div
          class="fui-hbc__chartTitle"
        >
          <div
            class="fui-hbc__chartTitleLeft"
            tabindex="0"
          >
            <span
              data-is-focusable="false"
              role="text"
            >
              three
            </span>
            <span
              hidden=""
            />
          </div>
          <div
            class="fui-hbc__chartTitleRight"
            data-is-focusable="false"
            role="text"
          >
            8,888
          </div>
        </div>
        <svg
          aria-label="three"
          class="fui-hbc__chart"
        >
          <g
            id="_HorizontalLine_lllllm_2"
          >
            <defs>
              <lineargradient
                class="HBC_gradient"
                id="HBC_Gradient80_2_0"
              >
                <stop
                  offset="0"
                  stop-color="#a4262c"
                />
                <stop
                  offset="100%"
                  stop-color=""
                />
              </lineargradient>
            </defs>
            <rect
              aria-label="2020/04/30, 59%."
              class="fui-hbc__barWrapper"
              data-is-focusable="true"
              fill="url(#HBC_Gradient80_2_0)"
              height="12"
              role="img"
              rx="4"
              tabindex="0"
              width="59.25333333333334%"
              x="0%"
              y="0"
            />
            <defs>
              <lineargradient
                class="HBC_gradient"
                id="HBC_Gradient80_2_1"
              >
                <stop
                  offset="0"
                  stop-color="var(--colorBackgroundOverlay)"
                />
                <stop
                  offset="100%"
                  stop-color="var(--colorBackgroundOverlay)"
                />
              </lineargradient>
            </defs>
            <rect
              aria-label="6112/15000."
              class="fui-hbc__barWrapper"
              data-is-focusable="false"
              fill="url(#HBC_Gradient80_2_1)"
              height="12"
              role="img"
              rx="4"
              width="40.74666666666666%"
              x="59.25333333333334%"
              y="0"
            />
          </g>
        </svg>
      </div>
    </div>
    <div
      class="fui-cart__calloutContainer"
      id="callout84"
    />
  </div>
</div>
`;

exports[`Horizontal bar chart - Screen resolution Should remain unchanged on zoom out 1`] = `
<div>
  <div
    class="fui-hbc__root"
  >
    <div>
      <div
        class="fui-hbc__items"
        data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
      >
        <div
          class="fui-hbc__chartTitle"
        >
          <div
            class="fui-hbc__chartTitleLeft"
            tabindex="0"
          >
            <span
              data-is-focusable="false"
              role="text"
            >
              one
            </span>
            <span
              hidden=""
            />
          </div>
          <div
            class="fui-hbc__chartTitleRight"
            data-is-focusable="false"
            role="text"
          >
            1,543
          </div>
        </div>
        <svg
          aria-label="one"
          class="fui-hbc__chart"
        >
          <g
            id="_HorizontalLine_lllllm_0"
          >
            <defs>
              <lineargradient
                class="HBC_gradient"
                id="HBC_Gradient86_0_0"
              >
                <stop
                  offset="0"
                  stop-color="#004b50"
                />
                <stop
                  offset="100%"
                  stop-color=""
                />
              </lineargradient>
            </defs>
            <rect
              aria-label="2020/04/30, 10%."
              class="fui-hbc__barWrapper"
              data-is-focusable="true"
              fill="url(#HBC_Gradient86_0_0)"
              height="12"
              role="img"
              rx="4"
              tabindex="0"
              width="10.286666666666665%"
              x="0%"
              y="0"
            />
            <defs>
              <lineargradient
                class="HBC_gradient"
                id="HBC_Gradient86_0_1"
              >
                <stop
                  offset="0"
                  stop-color="var(--colorBackgroundOverlay)"
                />
                <stop
                  offset="100%"
                  stop-color="var(--colorBackgroundOverlay)"
                />
              </lineargradient>
            </defs>
            <rect
              aria-label="13457/15000."
              class="fui-hbc__barWrapper"
              data-is-focusable="false"
              fill="url(#HBC_Gradient86_0_1)"
              height="12"
              role="img"
              rx="4"
              width="89.71333333333334%"
              x="10.286666666666665%"
              y="0"
            />
          </g>
        </svg>
      </div>
    </div>
    <div>
      <div
        class="fui-hbc__items"
        data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
      >
        <div
          class="fui-hbc__chartTitle"
        >
          <div
            class="fui-hbc__chartTitleLeft"
            tabindex="0"
          >
            <span
              data-is-focusable="false"
              role="text"
            >
              two
            </span>
            <span
              hidden=""
            />
          </div>
          <div
            class="fui-hbc__chartTitleRight"
            data-is-focusable="false"
            role="text"
          >
            800
          </div>
        </div>
        <svg
          aria-label="two"
          class="fui-hbc__chart"
        >
          <g
            id="_HorizontalLine_lllllm_1"
          >
            <defs>
              <lineargradient
                class="HBC_gradient"
                id="HBC_Gradient86_1_0"
              >
                <stop
                  offset="0"
                  stop-color="#5c2d91"
                />
                <stop
                  offset="100%"
                  stop-color=""
                />
              </lineargradient>
            </defs>
            <rect
              aria-label="2020/04/30, 5%."
              class="fui-hbc__barWrapper"
              data-is-focusable="true"
              fill="url(#HBC_Gradient86_1_0)"
              height="12"
              role="img"
              rx="4"
              tabindex="0"
              width="5.333333333333334%"
              x="0%"
              y="0"
            />
            <defs>
              <lineargradient
                class="HBC_gradient"
                id="HBC_Gradient86_1_1"
              >
                <stop
                  offset="0"
                  stop-color="var(--colorBackgroundOverlay)"
                />
                <stop
                  offset="100%"
                  stop-color="var(--colorBackgroundOverlay)"
                />
              </lineargradient>
            </defs>
            <rect
              aria-label="14200/15000."
              class="fui-hbc__barWrapper"
              data-is-focusable="false"
              fill="url(#HBC_Gradient86_1_1)"
              height="12"
              role="img"
              rx="4"
              width="94.66666666666667%"
              x="5.333333333333334%"
              y="0"
            />
          </g>
        </svg>
      </div>
    </div>
    <div>
      <div
        class="fui-hbc__items"
        data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
      >
        <div
          class="fui-hbc__chartTitle"
        >
          <div
            class="fui-hbc__chartTitleLeft"
            tabindex="0"
          >
            <span
              data-is-focusable="false"
              role="text"
            >
              three
            </span>
            <span
              hidden=""
            />
          </div>
          <div
            class="fui-hbc__chartTitleRight"
            data-is-focusable="false"
            role="text"
          >
            8,888
          </div>
        </div>
        <svg
          aria-label="three"
          class="fui-hbc__chart"
        >
          <g
            id="_HorizontalLine_lllllm_2"
          >
            <defs>
              <lineargradient
                class="HBC_gradient"
                id="HBC_Gradient86_2_0"
              >
                <stop
                  offset="0"
                  stop-color="#a4262c"
                />
                <stop
                  offset="100%"
                  stop-color=""
                />
              </lineargradient>
            </defs>
            <rect
              aria-label="2020/04/30, 59%."
              class="fui-hbc__barWrapper"
              data-is-focusable="true"
              fill="url(#HBC_Gradient86_2_0)"
              height="12"
              role="img"
              rx="4"
              tabindex="0"
              width="59.25333333333334%"
              x="0%"
              y="0"
            />
            <defs>
              <lineargradient
                class="HBC_gradient"
                id="HBC_Gradient86_2_1"
              >
                <stop
                  offset="0"
                  stop-color="var(--colorBackgroundOverlay)"
                />
                <stop
                  offset="100%"
                  stop-color="var(--colorBackgroundOverlay)"
                />
              </lineargradient>
            </defs>
            <rect
              aria-label="6112/15000."
              class="fui-hbc__barWrapper"
              data-is-focusable="false"
              fill="url(#HBC_Gradient86_2_1)"
              height="12"
              role="img"
              rx="4"
              width="40.74666666666666%"
              x="59.25333333333334%"
              y="0"
            />
          </g>
        </svg>
      </div>
    </div>
    <div
      class="fui-cart__calloutContainer"
      id="callout90"
    />
  </div>
</div>
`;

exports[`Horizontal bar chart - Theme Should reflect theme change 1`] = `
<div>
  <div
    class="fui-FluentProvider fui-FluentProvider91"
    dir="ltr"
  >
    <div
      class="fui-hbc__root"
    >
      <div>
        <div
          class="fui-hbc__items"
          data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
        >
          <div
            class="fui-hbc__chartTitle"
          >
            <div
              class="fui-hbc__chartTitleLeft"
              tabindex="0"
            >
              <span
                data-is-focusable="false"
                role="text"
              >
                one
              </span>
              <span
                hidden=""
              />
            </div>
            <div
              class="fui-hbc__chartTitleRight"
              data-is-focusable="false"
              role="text"
            >
              1,543
            </div>
          </div>
          <svg
            aria-label="one"
            class="fui-hbc__chart"
          >
            <g
              id="_HorizontalLine_lllllm_0"
            >
              <defs>
                <lineargradient
                  class="HBC_gradient"
                  id="HBC_Gradient93_0_0"
                >
                  <stop
                    offset="0"
                    stop-color="#004b50"
                  />
                  <stop
                    offset="100%"
                    stop-color=""
                  />
                </lineargradient>
              </defs>
              <rect
                aria-label="2020/04/30, 10%."
                class="fui-hbc__barWrapper"
                data-is-focusable="true"
                fill="url(#HBC_Gradient93_0_0)"
                height="12"
                role="img"
                rx="4"
                tabindex="0"
                width="10.286666666666665%"
                x="0%"
                y="0"
              />
              <defs>
                <lineargradient
                  class="HBC_gradient"
                  id="HBC_Gradient93_0_1"
                >
                  <stop
                    offset="0"
                    stop-color="var(--colorBackgroundOverlay)"
                  />
                  <stop
                    offset="100%"
                    stop-color="var(--colorBackgroundOverlay)"
                  />
                </lineargradient>
              </defs>
              <rect
                aria-label="13457/15000."
                class="fui-hbc__barWrapper"
                data-is-focusable="false"
                fill="url(#HBC_Gradient93_0_1)"
                height="12"
                role="img"
                rx="4"
                width="89.71333333333334%"
                x="10.286666666666665%"
                y="0"
              />
            </g>
          </svg>
        </div>
      </div>
      <div>
        <div
          class="fui-hbc__items"
          data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
        >
          <div
            class="fui-hbc__chartTitle"
          >
            <div
              class="fui-hbc__chartTitleLeft"
              tabindex="0"
            >
              <span
                data-is-focusable="false"
                role="text"
              >
                two
              </span>
              <span
                hidden=""
              />
            </div>
            <div
              class="fui-hbc__chartTitleRight"
              data-is-focusable="false"
              role="text"
            >
              800
            </div>
          </div>
          <svg
            aria-label="two"
            class="fui-hbc__chart"
          >
            <g
              id="_HorizontalLine_lllllm_1"
            >
              <defs>
                <lineargradient
                  class="HBC_gradient"
                  id="HBC_Gradient93_1_0"
                >
                  <stop
                    offset="0"
                    stop-color="#5c2d91"
                  />
                  <stop
                    offset="100%"
                    stop-color=""
                  />
                </lineargradient>
              </defs>
              <rect
                aria-label="2020/04/30, 5%."
                class="fui-hbc__barWrapper"
                data-is-focusable="true"
                fill="url(#HBC_Gradient93_1_0)"
                height="12"
                role="img"
                rx="4"
                tabindex="0"
                width="5.333333333333334%"
                x="0%"
                y="0"
              />
              <defs>
                <lineargradient
                  class="HBC_gradient"
                  id="HBC_Gradient93_1_1"
                >
                  <stop
                    offset="0"
                    stop-color="var(--colorBackgroundOverlay)"
                  />
                  <stop
                    offset="100%"
                    stop-color="var(--colorBackgroundOverlay)"
                  />
                </lineargradient>
              </defs>
              <rect
                aria-label="14200/15000."
                class="fui-hbc__barWrapper"
                data-is-focusable="false"
                fill="url(#HBC_Gradient93_1_1)"
                height="12"
                role="img"
                rx="4"
                width="94.66666666666667%"
                x="5.333333333333334%"
                y="0"
              />
            </g>
          </svg>
        </div>
      </div>
      <div>
        <div
          class="fui-hbc__items"
          data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
        >
          <div
            class="fui-hbc__chartTitle"
          >
            <div
              class="fui-hbc__chartTitleLeft"
              tabindex="0"
            >
              <span
                data-is-focusable="false"
                role="text"
              >
                three
              </span>
              <span
                hidden=""
              />
            </div>
            <div
              class="fui-hbc__chartTitleRight"
              data-is-focusable="false"
              role="text"
            >
              8,888
            </div>
          </div>
          <svg
            aria-label="three"
            class="fui-hbc__chart"
          >
            <g
              id="_HorizontalLine_lllllm_2"
            >
              <defs>
                <lineargradient
                  class="HBC_gradient"
                  id="HBC_Gradient93_2_0"
                >
                  <stop
                    offset="0"
                    stop-color="#a4262c"
                  />
                  <stop
                    offset="100%"
                    stop-color=""
                  />
                </lineargradient>
              </defs>
              <rect
                aria-label="2020/04/30, 59%."
                class="fui-hbc__barWrapper"
                data-is-focusable="true"
                fill="url(#HBC_Gradient93_2_0)"
                height="12"
                role="img"
                rx="4"
                tabindex="0"
                width="59.25333333333334%"
                x="0%"
                y="0"
              />
              <defs>
                <lineargradient
                  class="HBC_gradient"
                  id="HBC_Gradient93_2_1"
                >
                  <stop
                    offset="0"
                    stop-color="var(--colorBackgroundOverlay)"
                  />
                  <stop
                    offset="100%"
                    stop-color="var(--colorBackgroundOverlay)"
                  />
                </lineargradient>
              </defs>
              <rect
                aria-label="6112/15000."
                class="fui-hbc__barWrapper"
                data-is-focusable="false"
                fill="url(#HBC_Gradient93_2_1)"
                height="12"
                role="img"
                rx="4"
                width="40.74666666666666%"
                x="59.25333333333334%"
                y="0"
              />
            </g>
          </svg>
        </div>
      </div>
      <div
        class="fui-cart__calloutContainer"
        id="callout97"
      />
    </div>
  </div>
</div>
`;

exports[`Horizontal bar chart re-rendering Should re-render the Horizontal bar chart with data 1`] = `
<div>
  <div
    aria-label="Graph has no data to display"
    id="_HBC_empty98"
    role="alert"
    style="opacity: 0;"
  />
</div>
`;

exports[`Horizontal bar chart re-rendering Should re-render the Horizontal bar chart with data 2`] = `
<div>
  <div
    class="fui-hbc__root"
    style=""
  >
    <div>
      <div
        class="fui-hbc__items"
        data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
      >
        <div
          class="fui-hbc__chartTitle"
        >
          <div
            class="fui-hbc__chartTitleLeft"
            tabindex="0"
          >
            <span
              data-is-focusable="false"
              role="text"
            >
              one
            </span>
            <span
              hidden=""
            />
          </div>
          <div
            class="fui-hbc__chartTitleRight"
            data-is-focusable="false"
            role="text"
          >
            1,543
          </div>
        </div>
        <svg
          aria-label="one"
          class="fui-hbc__chart"
        >
          <g
            id="_HorizontalLine_lllllm_0"
          >
            <defs>
              <lineargradient
                class="HBC_gradient"
                id="HBC_Gradient99_0_0"
              >
                <stop
                  offset="0"
                  stop-color="#004b50"
                />
                <stop
                  offset="100%"
                  stop-color=""
                />
              </lineargradient>
            </defs>
            <rect
              aria-label="2020/04/30, 10%."
              class="fui-hbc__barWrapper"
              data-is-focusable="true"
              fill="url(#HBC_Gradient99_0_0)"
              height="12"
              role="img"
              rx="4"
              tabindex="0"
              width="10.286666666666665%"
              x="0%"
              y="0"
            />
            <defs>
              <lineargradient
                class="HBC_gradient"
                id="HBC_Gradient99_0_1"
              >
                <stop
                  offset="0"
                  stop-color="var(--colorBackgroundOverlay)"
                />
                <stop
                  offset="100%"
                  stop-color="var(--colorBackgroundOverlay)"
                />
              </lineargradient>
            </defs>
            <rect
              aria-label="13457/15000."
              class="fui-hbc__barWrapper"
              data-is-focusable="false"
              fill="url(#HBC_Gradient99_0_1)"
              height="12"
              role="img"
              rx="4"
              width="89.71333333333334%"
              x="10.286666666666665%"
              y="0"
            />
          </g>
        </svg>
      </div>
    </div>
    <div>
      <div
        class="fui-hbc__items"
        data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
      >
        <div
          class="fui-hbc__chartTitle"
        >
          <div
            class="fui-hbc__chartTitleLeft"
            tabindex="0"
          >
            <span
              data-is-focusable="false"
              role="text"
            >
              two
            </span>
            <span
              hidden=""
            />
          </div>
          <div
            class="fui-hbc__chartTitleRight"
            data-is-focusable="false"
            role="text"
          >
            800
          </div>
        </div>
        <svg
          aria-label="two"
          class="fui-hbc__chart"
        >
          <g
            id="_HorizontalLine_lllllm_1"
          >
            <defs>
              <lineargradient
                class="HBC_gradient"
                id="HBC_Gradient99_1_0"
              >
                <stop
                  offset="0"
                  stop-color="#5c2d91"
                />
                <stop
                  offset="100%"
                  stop-color=""
                />
              </lineargradient>
            </defs>
            <rect
              aria-label="2020/04/30, 5%."
              class="fui-hbc__barWrapper"
              data-is-focusable="true"
              fill="url(#HBC_Gradient99_1_0)"
              height="12"
              role="img"
              rx="4"
              tabindex="0"
              width="5.333333333333334%"
              x="0%"
              y="0"
            />
            <defs>
              <lineargradient
                class="HBC_gradient"
                id="HBC_Gradient99_1_1"
              >
                <stop
                  offset="0"
                  stop-color="var(--colorBackgroundOverlay)"
                />
                <stop
                  offset="100%"
                  stop-color="var(--colorBackgroundOverlay)"
                />
              </lineargradient>
            </defs>
            <rect
              aria-label="14200/15000."
              class="fui-hbc__barWrapper"
              data-is-focusable="false"
              fill="url(#HBC_Gradient99_1_1)"
              height="12"
              role="img"
              rx="4"
              width="94.66666666666667%"
              x="5.333333333333334%"
              y="0"
            />
          </g>
        </svg>
      </div>
    </div>
    <div>
      <div
        class="fui-hbc__items"
        data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
      >
        <div
          class="fui-hbc__chartTitle"
        >
          <div
            class="fui-hbc__chartTitleLeft"
            tabindex="0"
          >
            <span
              data-is-focusable="false"
              role="text"
            >
              three
            </span>
            <span
              hidden=""
            />
          </div>
          <div
            class="fui-hbc__chartTitleRight"
            data-is-focusable="false"
            role="text"
          >
            8,888
          </div>
        </div>
        <svg
          aria-label="three"
          class="fui-hbc__chart"
        >
          <g
            id="_HorizontalLine_lllllm_2"
          >
            <defs>
              <lineargradient
                class="HBC_gradient"
                id="HBC_Gradient99_2_0"
              >
                <stop
                  offset="0"
                  stop-color="#a4262c"
                />
                <stop
                  offset="100%"
                  stop-color=""
                />
              </lineargradient>
            </defs>
            <rect
              aria-label="2020/04/30, 59%."
              class="fui-hbc__barWrapper"
              data-is-focusable="true"
              fill="url(#HBC_Gradient99_2_0)"
              height="12"
              role="img"
              rx="4"
              tabindex="0"
              width="59.25333333333334%"
              x="0%"
              y="0"
            />
            <defs>
              <lineargradient
                class="HBC_gradient"
                id="HBC_Gradient99_2_1"
              >
                <stop
                  offset="0"
                  stop-color="var(--colorBackgroundOverlay)"
                />
                <stop
                  offset="100%"
                  stop-color="var(--colorBackgroundOverlay)"
                />
              </lineargradient>
            </defs>
            <rect
              aria-label="6112/15000."
              class="fui-hbc__barWrapper"
              data-is-focusable="false"
              fill="url(#HBC_Gradient99_2_1)"
              height="12"
              role="img"
              rx="4"
              width="40.74666666666666%"
              x="59.25333333333334%"
              y="0"
            />
          </g>
        </svg>
      </div>
    </div>
    <div
      class="fui-cart__calloutContainer"
      id="callout103"
    />
  </div>
</div>
`;

exports[`Horizontal bar chart rendering Should render the Horizontal bar chart legend with string data 1`] = `
<div>
  <div
    class="fui-hbc__root"
  >
    <div>
      <div
        class="fui-hbc__items"
        data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
      >
        <div
          class="fui-hbc__chartTitle"
        >
          <div
            class="fui-hbc__chartTitleLeft"
            tabindex="0"
          >
            <span
              data-is-focusable="false"
              role="text"
            >
              one
            </span>
            <span
              hidden=""
            />
          </div>
          <div
            class="fui-hbc__chartTitleRight"
            data-is-focusable="false"
            role="text"
          >
            1,543
          </div>
        </div>
        <svg
          aria-label="one"
          class="fui-hbc__chart"
        >
          <g
            id="_HorizontalLine_lllllm_0"
          >
            <defs>
              <lineargradient
                class="HBC_gradient"
                id="HBC_Gradient2_0_0"
              >
                <stop
                  offset="0"
                  stop-color="#004b50"
                />
                <stop
                  offset="100%"
                  stop-color=""
                />
              </lineargradient>
            </defs>
            <rect
              aria-label="2020/04/30, 10%."
              class="fui-hbc__barWrapper"
              data-is-focusable="true"
              fill="url(#HBC_Gradient2_0_0)"
              height="12"
              role="img"
              rx="4"
              tabindex="0"
              width="10.286666666666665%"
              x="0%"
              y="0"
            />
            <defs>
              <lineargradient
                class="HBC_gradient"
                id="HBC_Gradient2_0_1"
              >
                <stop
                  offset="0"
                  stop-color="var(--colorBackgroundOverlay)"
                />
                <stop
                  offset="100%"
                  stop-color="var(--colorBackgroundOverlay)"
                />
              </lineargradient>
            </defs>
            <rect
              aria-label="13457/15000."
              class="fui-hbc__barWrapper"
              data-is-focusable="false"
              fill="url(#HBC_Gradient2_0_1)"
              height="12"
              role="img"
              rx="4"
              width="89.71333333333334%"
              x="10.286666666666665%"
              y="0"
            />
          </g>
        </svg>
      </div>
    </div>
    <div>
      <div
        class="fui-hbc__items"
        data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
      >
        <div
          class="fui-hbc__chartTitle"
        >
          <div
            class="fui-hbc__chartTitleLeft"
            tabindex="0"
          >
            <span
              data-is-focusable="false"
              role="text"
            >
              two
            </span>
            <span
              hidden=""
            />
          </div>
          <div
            class="fui-hbc__chartTitleRight"
            data-is-focusable="false"
            role="text"
          >
            800
          </div>
        </div>
        <svg
          aria-label="two"
          class="fui-hbc__chart"
        >
          <g
            id="_HorizontalLine_lllllm_1"
          >
            <defs>
              <lineargradient
                class="HBC_gradient"
                id="HBC_Gradient2_1_0"
              >
                <stop
                  offset="0"
                  stop-color="#5c2d91"
                />
                <stop
                  offset="100%"
                  stop-color=""
                />
              </lineargradient>
            </defs>
            <rect
              aria-label="2020/04/30, 5%."
              class="fui-hbc__barWrapper"
              data-is-focusable="true"
              fill="url(#HBC_Gradient2_1_0)"
              height="12"
              role="img"
              rx="4"
              tabindex="0"
              width="5.333333333333334%"
              x="0%"
              y="0"
            />
            <defs>
              <lineargradient
                class="HBC_gradient"
                id="HBC_Gradient2_1_1"
              >
                <stop
                  offset="0"
                  stop-color="var(--colorBackgroundOverlay)"
                />
                <stop
                  offset="100%"
                  stop-color="var(--colorBackgroundOverlay)"
                />
              </lineargradient>
            </defs>
            <rect
              aria-label="14200/15000."
              class="fui-hbc__barWrapper"
              data-is-focusable="false"
              fill="url(#HBC_Gradient2_1_1)"
              height="12"
              role="img"
              rx="4"
              width="94.66666666666667%"
              x="5.333333333333334%"
              y="0"
            />
          </g>
        </svg>
      </div>
    </div>
    <div>
      <div
        class="fui-hbc__items"
        data-tabster="{\\"groupper\\":{},\\"focusable\\":{}}"
      >
        <div
          class="fui-hbc__chartTitle"
        >
          <div
            class="fui-hbc__chartTitleLeft"
            tabindex="0"
          >
            <span
              data-is-focusable="false"
              role="text"
            >
              three
            </span>
            <span
              hidden=""
            />
          </div>
          <div
            class="fui-hbc__chartTitleRight"
            data-is-focusable="false"
            role="text"
          >
            8,888
          </div>
        </div>
        <svg
          aria-label="three"
          class="fui-hbc__chart"
        >
          <g
            id="_HorizontalLine_lllllm_2"
          >
            <defs>
              <lineargradient
                class="HBC_gradient"
                id="HBC_Gradient2_2_0"
              >
                <stop
                  offset="0"
                  stop-color="#a4262c"
                />
                <stop
                  offset="100%"
                  stop-color=""
                />
              </lineargradient>
            </defs>
            <rect
              aria-label="2020/04/30, 59%."
              class="fui-hbc__barWrapper"
              data-is-focusable="true"
              fill="url(#HBC_Gradient2_2_0)"
              height="12"
              role="img"
              rx="4"
              tabindex="0"
              width="59.25333333333334%"
              x="0%"
              y="0"
            />
            <defs>
              <lineargradient
                class="HBC_gradient"
                id="HBC_Gradient2_2_1"
              >
                <stop
                  offset="0"
                  stop-color="var(--colorBackgroundOverlay)"
                />
                <stop
                  offset="100%"
                  stop-color="var(--colorBackgroundOverlay)"
                />
              </lineargradient>
            </defs>
            <rect
              aria-label="6112/15000."
              class="fui-hbc__barWrapper"
              data-is-focusable="false"
              fill="url(#HBC_Gradient2_2_1)"
              height="12"
              role="img"
              rx="4"
              width="40.74666666666666%"
              x="59.25333333333334%"
              y="0"
            />
          </g>
        </svg>
      </div>
    </div>
    <div
      class="fui-cart__calloutContainer"
      id="callout6"
    />
  </div>
</div>
`;
